--- a/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
@@ -27,7 +27,10 @@ library(here)
 #load data
 ```{r}
 
-data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+#old dir
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+
+data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data"
 
 comm_data <- load(file.path(data_path, "comm_data.rda"))
 nmds_scores <- load(file.path(data_path, "bray_nmds_scores.rda"))
@@ -61,8 +64,8 @@ eco_dist <- load(file.path(data_path, "distance_matrices_BC.rda"))
 ```{r}
 
 
-scrs <- as.data.frame(scores(CCFRP_ord, display="site"))
-en_coord_cont = as.data.frame(scores(CCFRP_en, "vectors")) * ordiArrowMul(CCFRP_en, fill=0.15)
+scrs <- as.data.frame(vegan::scores(CCFRP_ord, display="sites"))
+en_coord_cont = as.data.frame(vegan::scores(CCFRP_en, "vectors")) * ordiArrowMul(CCFRP_en, fill=0.2)
 
 scrs <- cbind(as.data.frame(scrs), desig_state=CCFRP_group_vars$desig_state, year=CCFRP_group_vars$year, MHW=CCFRP_group_vars$MHW, region4=CCFRP_group_vars$region4, mpa_designation=CCFRP_group_vars$mpa_designation) #to facilitate computing centroids, add group var
 
@@ -106,26 +109,44 @@ df_ell <- df_ell %>%
 cent$mpa_designation <- factor(cent$mpa_designation, level=c("smr","ref"))
 cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 
+cent$mpa_designation <- recode_factor(cent$mpa_designation, "smr"="Inside MPA")
+cent$mpa_designation <- recode_factor(cent$mpa_designation, "ref"="Outside MPA")
 
 
+ccfrp_stress <- as.data.frame(CCFRP_ord[["stress"]]) %>% 
+  rename("stress" = 1) %>%
+  mutate_at(1, round, 3)
 
 CCFRP<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
-  geom_point(aes(shape=mpa_designation, color=MHW), size=4) +                           #centroids
+  geom_point(aes(shape=mpa_designation, color=MHW), size=3) +                           #centroids
   geom_path(data = df_ell, aes(NMDS1, NMDS2, colour=MHW, 
-                               group=group), size = 0.5, linetype=2, 
+                               group=group), size = 0.4, linetype=2, 
             )+           #line connecting groups (years)
    geom_segment(aes(x = 0, y = 0, xend = (NMDS1), yend = (NMDS2)), 
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.02), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.02), size=2) + 
   ggtitle("CCFRP")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=12, face="bold"))+
-  theme(plot.title = element_text(size=14, face="bold"))+
-  labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(18))+
-  theme_classic()
+  labs(shape="MPA type",color='Heatwave period') +
+  annotate(geom="text", 
+           x=0.12, 
+           y=0.2, 
+           col="black", 
+           label= paste("Stress: ",ccfrp_stress$stress), parse=T,
+           size=3)+
+  theme_classic()+
+  theme(strip.text = element_text(size=8, face="bold"),
+        axis.title = element_text(size=8),
+        plot.title = element_text(size=10),
+        legend.key = element_rect(size = 2, color="white"),
+        legend.key.size = unit(0.8, "cm")
+        )
+
+  
+  
+
  
 
 
@@ -138,8 +159,8 @@ print(CCFRP)
 ```{r}
 
 #get NMDS scores
-scrs <- as.data.frame(scores(kelp_invalg_ord, display="site"))
-en_coord_cont = as.data.frame(scores(kelp_invalg_en, "vectors")) * ordiArrowMul(kelp_invalg_en, fill=0.3)
+scrs <- as.data.frame(vegan::scores(kelp_invalg_ord, display="site"))
+en_coord_cont = as.data.frame(vegan::scores(kelp_invalg_en, "vectors")) * ordiArrowMul(kelp_invalg_en, fill=0.35)
 
 scrs <- cbind(as.data.frame(scrs), desig_state=kelp_invalg_group_vars$desig_state, year=kelp_invalg_group_vars$year, region4=kelp_invalg_group_vars$region4, mpa_designation=kelp_invalg_group_vars$mpa_defacto_designation, MHW=kelp_invalg_group_vars$MHW) #to facilitate computing centroids, add group var
 
@@ -174,25 +195,37 @@ df_ell <- df_ell %>%
 cent$mpa_designation <- factor(cent$mpa_designation, level=c("smr","ref"))
 cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 
+kelp_invalg_stress <- as.data.frame(kelp_invalg_ord[["stress"]]) %>% 
+  rename("stress" = 1) %>%
+  mutate_at(1, round, 3)
 
 
 kelp_invalg<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
-  geom_point(aes(shape=mpa_designation, color=MHW), size=4) +                           #centroids
+  geom_point(aes(shape=mpa_designation, color=MHW), size=3) +                           #centroids
   geom_path(data = df_ell, aes(NMDS1, NMDS2, colour=MHW, 
-                               group=group), size = 0.5, linetype=2, 
+                               group=group), size = 0.4, linetype=2, 
             )+           #line connecting groups (years)
    geom_segment(aes(x = 0, y = 0, xend = (NMDS1), yend = (NMDS2)), 
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.02), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.02), size=2) + 
   ggtitle("kelp invertebrates and algae")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=12, face="bold"))+
-  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(18))+
-  theme_classic()
+  annotate(geom="text", 
+           x=0.29, 
+           y=0.2, 
+           col="black", 
+           label= paste("Stress: ",kelp_invalg_stress$stress), parse=T,
+           size=3)+
+ theme_classic()+
+  theme(strip.text = element_text(size=8, face="bold"),
+        axis.title = element_text(size=8),
+        plot.title = element_text(size=10),
+        legend.key = element_rect(size = 2, color="white"),
+        legend.key.size = unit(0.8, "cm")
+        )
 
 print(kelp_invalg)
 
@@ -205,8 +238,8 @@ print(kelp_invalg)
 ```{r}
 
 #get NMDS scores
-scrs <- as.data.frame(scores(kelp_fish_ord, display="site"))
-en_coord_cont = as.data.frame(scores(kelp_fish_en, "vectors")) * ordiArrowMul(kelp_fish_en, fill=0.1)
+scrs <- as.data.frame(vegan::scores(kelp_fish_ord, display="site"))
+en_coord_cont = as.data.frame(vegan::scores(kelp_fish_en, "vectors")) * ordiArrowMul(kelp_fish_en, fill=0.1)
 
 scrs <- cbind(as.data.frame(scrs), desig_state=kelp_fish_group_vars$desig_state, year=kelp_fish_group_vars$year, region4=kelp_fish_group_vars$region4, mpa_designation=kelp_fish_group_vars$mpa_defacto_designation, MHW=kelp_fish_group_vars$MHW) #to facilitate computing centroids, add group var
 
@@ -239,25 +272,36 @@ df_ell <- df_ell %>%
 cent$mpa_designation <- factor(cent$mpa_designation, level=c("smr","ref"))
 cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 
-
+kelp_fish_stress <- as.data.frame(kelp_fish_ord[["stress"]]) %>% 
+  rename("stress" = 1) %>%
+  mutate_at(1, round, 3)
 
 kelp_fish<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
-  geom_point(aes(shape=mpa_designation, color=MHW), size=4) +                           #centroids
+  geom_point(aes(shape=mpa_designation, color=MHW), size=3) +                           #centroids
   geom_path(data = df_ell, aes(NMDS1, NMDS2, colour=MHW, 
-                               group=group), size = 0.5, linetype=2, 
+                               group=group), size = 0.4, linetype=2, 
             )+           #line connecting groups (years)
    geom_segment(aes(x = 0, y = 0, xend = (NMDS1), yend = (NMDS2)), 
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=2) + 
   ggtitle("kelp fish")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=12, face="bold"))+
-  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(18))+
-  theme_classic()
+  annotate(geom="text", 
+           x=0.1, 
+           y=0.12, 
+           col="black", 
+           label= paste("Stress: ",kelp_fish_stress$stress), parse=T,
+           size=3)+
+theme_classic()+
+  theme(strip.text = element_text(size=8, face="bold"),
+        axis.title = element_text(size=8),
+        plot.title = element_text(size=10),
+        legend.key = element_rect(size = 2, color="white"),
+        legend.key.size = unit(0.8, "cm")
+        )
 
 
 print(kelp_fish)
@@ -269,8 +313,8 @@ print(kelp_fish)
 ```{r}
 
 #get NMDS scores
-scrs <- as.data.frame(scores(deep_reef_ord, display="site"))
-en_coord_cont = as.data.frame(scores(deep_reef_en, "vectors")) * ordiArrowMul(deep_reef_en, fill=0.2)
+scrs <- as.data.frame(vegan::scores(deep_reef_ord, display="site"))
+en_coord_cont = as.data.frame(vegan::scores(deep_reef_en, "vectors")) * ordiArrowMul(deep_reef_en, fill=0.18)
 
 scrs <- cbind(as.data.frame(scrs), desig_state=deep_reef_group_vars$desig_state, year=deep_reef_group_vars$year, region4=deep_reef_group_vars$region4, mpa_designation=deep_reef_group_vars$mpa_defacto_designation, MHW=deep_reef_group_vars$MHW) #to facilitate computing centroids, add group var
 
@@ -304,24 +348,37 @@ cent$mpa_designation <- factor(cent$mpa_designation, level=c("smr","ref"))
 cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 
 
+deep_reef_stress <- as.data.frame(deep_reef_ord[["stress"]]) %>% 
+  rename("stress" = 1) %>%
+  mutate_at(1, round, 3)
 
 deep_reef<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
-  geom_point(aes(shape=mpa_designation, color=MHW), size=4) +                           #centroids
+  geom_point(aes(shape=mpa_designation, color=MHW), size=3) +                           #centroids
   geom_path(data = df_ell, aes(NMDS1, NMDS2, colour=MHW, 
-                               group=group), size = 0.5, linetype=2, 
+                               group=group), size = 0.4, linetype=2, 
             )+           #line connecting groups (years)
    geom_segment(aes(x = 0, y = 0, xend = (NMDS1), yend = (NMDS2)), 
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=2) + 
   ggtitle("deep reef")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=12, face="bold"))+
-  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(18))+
-  theme_classic()
+  #theme(text = element_text(12))+
+  annotate(geom="text", 
+           x=0.17, 
+           y=0.2, 
+           col="black", 
+           label= paste("Stress: ",deep_reef_stress$stress), parse=T,
+           size=3)+
+theme_classic()+
+  theme(strip.text = element_text(size=8, face="bold"),
+        axis.title = element_text(size=8),
+        plot.title = element_text(size=10),
+        legend.key = element_rect(size = 2, color="white"),
+        legend.key.size = unit(0.8, "cm")
+        )
 
 
 print(deep_reef)
@@ -334,8 +391,8 @@ print(deep_reef)
 ```{r}
 
 #get NMDS scores
-scrs <- as.data.frame(scores(rocky_ord, display="site"))
-en_coord_cont = as.data.frame(scores(rocky_en, "vectors")) * ordiArrowMul(rocky_en, fill=0.1)
+scrs <- as.data.frame(vegan::scores(rocky_ord, display="site"))
+en_coord_cont = as.data.frame(vegan::scores(rocky_en, "vectors")) * ordiArrowMul(rocky_en, fill=0.1)
 
 scrs <- cbind(as.data.frame(scrs), desig_state=rocky_group_vars$desig_state, year=rocky_group_vars$year, region4=rocky_group_vars$region4, mpa_designation=rocky_group_vars$mpa_designation, MHW=rocky_group_vars$MHW) #to facilitate computing centroids, add group var
 
@@ -369,24 +426,38 @@ cent$mpa_designation <- factor(cent$mpa_designation, level=c("smr","ref"))
 cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 
 
+rocky_stress <- as.data.frame(rocky_ord[["stress"]]) %>% 
+  rename("stress" = 1) %>%
+  mutate_at(1, round, 3)
+
 
 rocky<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
-  geom_point(aes(shape=mpa_designation, color=MHW), size=4) +                           #centroids
+  geom_point(aes(shape=mpa_designation, color=MHW), size=3) +                           #centroids
   geom_path(data = df_ell, aes(NMDS1, NMDS2, colour=MHW, 
-                               group=group), size = 0.5, linetype=2, 
+                               group=group), size = 0.4, linetype=2, 
             )+           #line connecting groups (years)
    geom_segment(aes(x = 0, y = 0, xend = (NMDS1), yend = (NMDS2)), 
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=2) + 
   ggtitle("rocky intertidal")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=12, face="bold"))+
-  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(18))+
-  theme_classic()
+  #theme(text = element_text(12))+
+    annotate(geom="text", 
+           x=0.07, 
+           y=0.08, 
+           col="black", 
+           label= paste("Stress: ",rocky_stress$stress), parse=T,
+           size=3)+
+theme_classic()+
+  theme(strip.text = element_text(size=8, face="bold"),
+        axis.title = element_text(size=8),
+        plot.title = element_text(size=10),
+        legend.key = element_rect(size = 2, color="white"),
+        legend.key.size = unit(0.8, "cm")
+        )
 
 
 print(rocky)
@@ -399,7 +470,7 @@ print(rocky)
 #create dummy legend as last panel
 legend <- get_legend(
   # create some space to the left of the legend
-  CCFRP + theme(legend.box.margin = margin(0, 0, 0, 12))
+  CCFRP + theme(legend.box.margin = margin(0, 0, 0, 6))
 )
 
 cplot <- cowplot::plot_grid(
@@ -413,10 +484,9 @@ cplot <- cowplot::plot_grid(
 print(cplot)
 
 
-#cowplot::save_plot(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central2.png"), figure, bg="white",dpi = 600, units = "in")
+#cowplot::save_plot(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central3.png"), cplot, bg="white",dpi = 600, units = "in", base_width=8.5, base_height = 6)
 
 
-#ggsave(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central.png"), figure_test, width=10, bg="white",dpi = 600, units = "in")
 
 ```
 
